# kobuki_control

./: CMakeLists.txt  README.md  package.xml
config/: test_robot_controller.yaml
launch/: navigation.launch  open_loop.launch  spawn_robot.launch  test.launch  view_robot.launch
nodes/: info_subscriber.py  kobuki_controller.py  kobuki_listener.py  kobuki_model.py  kobuki_teleop.py  read_pose.py  reference_listener.py  reference_manager.py  test.py
rviz/: model.rviz
urdf/: kobuki.urdf.xacro  kobuki_view.urdf
worlds/: taller2.world
