<?xml version="1.0"?>
<package format="2">
  <name>kobuki_control</name>
  <version>0.0.0</version>
  <description>The kobuki_control package</description>

  <maintainer email="canborda@unal.edu.co">Camilo Andres Borda Gil</maintainer>
  <maintainer email="dafdiazco@unal.edu.co">Daniel Fernando Diaz Coy</maintainer>
  <maintainer email="afriverat@unal.edu.co">Andres Felipe Rivera Torres</maintainer>

  <license>BSD</license>

  <author email="caabordagi@unal.edu.co">Camilo Andres Borda Gil</author>

  <!-- DEPENDENCES -->

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>gazebo_ros</build_depend>
  <build_depend>rospy</build_depend>

  <build_export_depend>gazebo_ros</build_export_depend>
  <build_export_depend>rospy</build_export_depend>

  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>rospy</exec_depend>

  <!-- EXPORT -->

  <export>
    <!-- Other tools can request additional information be placed here -->
    <gazebo_ros gazebo_media_path ="${prefix}/worlds"/>
  </export>
  
</package>
